// <auto-generated />
using System;
using CoinUpAPI.Data;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Metadata;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;

#nullable disable

namespace CoinUpAPI.Migrations
{
    [DbContext(typeof(ApplicationDbContext))]
    partial class ApplicationDbContextModelSnapshot : ModelSnapshot
    {
        protected override void BuildModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "8.0.22")
                .HasAnnotation("Relational:MaxIdentifierLength", 128);

            SqlServerModelBuilderExtensions.UseIdentityColumns(modelBuilder);

            modelBuilder.Entity("CoinUp.Shared.Models.CoinsMarket", b =>
                {
                    b.Property<string>("Id")
                        .HasColumnType("nvarchar(450)");

                    b.Property<decimal>("Ath")
                        .HasColumnType("decimal(18,2)");

                    b.Property<decimal>("Ath_Change_Percentage")
                        .HasColumnType("decimal(18,2)");

                    b.Property<DateTime>("Ath_Date")
                        .HasColumnType("datetime2");

                    b.Property<decimal>("Atl")
                        .HasColumnType("decimal(18,2)");

                    b.Property<decimal>("Atl_Change_Percentage")
                        .HasColumnType("decimal(18,2)");

                    b.Property<DateTime>("Atl_Date")
                        .HasColumnType("datetime2");

                    b.Property<decimal>("Circulating_Supply")
                        .HasColumnType("decimal(18,2)");

                    b.Property<decimal>("Current_Price")
                        .HasColumnType("decimal(18,2)");

                    b.Property<decimal?>("Fully_Diluted_Valuation")
                        .HasColumnType("decimal(18,2)");

                    b.Property<decimal>("High_24h")
                        .HasColumnType("decimal(18,2)");

                    b.Property<string>("Image")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<DateTime>("Last_Updated")
                        .HasColumnType("datetime2");

                    b.Property<decimal>("Low_24h")
                        .HasColumnType("decimal(18,2)");

                    b.Property<decimal?>("Market_Cap")
                        .HasColumnType("decimal(18,2)");

                    b.Property<decimal>("Market_Cap_Change_24h")
                        .HasColumnType("decimal(18,2)");

                    b.Property<decimal>("Market_Cap_Change_Percentage_24h")
                        .HasColumnType("decimal(18,2)");

                    b.Property<int>("Market_Cap_Rank")
                        .HasColumnType("int");

                    b.Property<decimal?>("Max_Supply")
                        .HasColumnType("decimal(18,2)");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<decimal>("Price_Change_24h")
                        .HasColumnType("decimal(18,2)");

                    b.Property<decimal>("Price_Change_Percentage_24h")
                        .HasColumnType("decimal(18,2)");

                    b.Property<int>("Rank")
                        .HasColumnType("int");

                    b.Property<string>("Symbol")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<decimal?>("Total_Supply")
                        .HasColumnType("decimal(18,2)");

                    b.Property<decimal>("Total_Volume")
                        .HasColumnType("decimal(18,2)");

                    b.HasKey("Id");

                    b.ToTable("CoinsMarket");
                });

            modelBuilder.Entity("CoinUp.Shared.Models.CoinsMarketCategory", b =>
                {
                    b.Property<string>("Id")
                        .HasColumnType("nvarchar(450)");

                    b.Property<string>("Content")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<double>("MarketCap")
                        .HasColumnType("float");

                    b.Property<double>("MarketCapChange24h")
                        .HasColumnType("float");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Top3Coins")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Top3CoinsId")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<DateTime>("UpdatedAt")
                        .HasColumnType("datetime2");

                    b.Property<double>("Volume24h")
                        .HasColumnType("float");

                    b.HasKey("Id");

                    b.ToTable("CoinsMarketCategory");
                });

            modelBuilder.Entity("CoinUp.Shared.Models.MarketChartDetails", b =>
                {
                    b.Property<string>("Id")
                        .HasColumnType("nvarchar(450)");

                    b.Property<string>("MarketCapsJson")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("PricesJson")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<int>("Rank")
                        .HasColumnType("int");

                    b.Property<string>("TotalVolumesJson")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("Id");

                    b.ToTable("MarketChartDetails");
                });

            modelBuilder.Entity("CoinUpAPI.Models.CoinHolding", b =>
                {
                    b.Property<string>("Id")
                        .HasColumnType("nvarchar(450)");

                    b.Property<decimal>("AverageBuyPrice")
                        .HasColumnType("decimal(18,2)");

                    b.Property<string>("CoinId")
                        .IsRequired()
                        .HasColumnType("nvarchar(450)");

                    b.Property<DateTime>("LastUpdated")
                        .HasColumnType("datetime2");

                    b.Property<decimal>("Quantity")
                        .HasColumnType("decimal(18,2)");

                    b.Property<string>("WalletId")
                        .IsRequired()
                        .HasColumnType("nvarchar(450)");

                    b.HasKey("Id");

                    b.HasIndex("CoinId");

                    b.HasIndex("WalletId");

                    b.ToTable("CoinHoldings");
                });

            modelBuilder.Entity("CoinUpAPI.Models.EWallet", b =>
                {
                    b.Property<string>("Id")
                        .HasColumnType("nvarchar(450)");

                    b.Property<decimal>("Balance")
                        .HasColumnType("decimal(18,2)");

                    b.Property<string>("UserId")
                        .IsRequired()
                        .HasColumnType("nvarchar(450)");

                    b.HasKey("Id");

                    b.HasIndex("UserId")
                        .IsUnique();

                    b.ToTable("EWallets");
                });

            modelBuilder.Entity("CoinUpAPI.Models.PortfolioSnapshot", b =>
                {
                    b.Property<string>("Id")
                        .HasColumnType("nvarchar(450)");

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("datetime2");

                    b.Property<decimal>("TotalValue")
                        .HasColumnType("decimal(18,2)");

                    b.Property<string>("UserId")
                        .IsRequired()
                        .HasColumnType("nvarchar(450)");

                    b.HasKey("Id");

                    b.HasIndex("UserId");

                    b.ToTable("PortfolioSnapshots");
                });

            modelBuilder.Entity("CoinUpAPI.Models.Transaction", b =>
                {
                    b.Property<string>("Id")
                        .HasColumnType("nvarchar(450)");

                    b.Property<string>("CoinId")
                        .IsRequired()
                        .HasColumnType("nvarchar(450)");

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("datetime2");

                    b.Property<decimal>("PriceAtOperation")
                        .HasColumnType("decimal(18,2)");

                    b.Property<decimal>("Quantity")
                        .HasColumnType("decimal(18,2)");

                    b.Property<DateTime>("Timestamp")
                        .HasColumnType("datetime2");

                    b.Property<int>("Type")
                        .HasColumnType("int");

                    b.Property<string>("WalletId")
                        .IsRequired()
                        .HasColumnType("nvarchar(450)");

                    b.HasKey("Id");

                    b.HasIndex("CoinId");

                    b.HasIndex("WalletId");

                    b.ToTable("Transactions");
                });

            modelBuilder.Entity("CoinUpAPI.Models.User", b =>
                {
                    b.Property<string>("Id")
                        .HasColumnType("nvarchar(450)");

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("datetime2");

                    b.Property<string>("Email")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("PasswordHash")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Username")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("Id");

                    b.ToTable("Users");
                });

            modelBuilder.Entity("CoinUpAPI.Models.WatchlistItem", b =>
                {
                    b.Property<string>("Id")
                        .HasColumnType("nvarchar(450)");

                    b.Property<DateTime>("AddedAt")
                        .HasColumnType("datetime2");

                    b.Property<string>("CoinId")
                        .IsRequired()
                        .HasColumnType("nvarchar(450)");

                    b.Property<string>("UserId")
                        .IsRequired()
                        .HasColumnType("nvarchar(450)");

                    b.HasKey("Id");

                    b.HasIndex("CoinId");

                    b.HasIndex("UserId");

                    b.ToTable("WatchlistItems");
                });

            modelBuilder.Entity("CoinUpAPI.Models.CoinHolding", b =>
                {
                    b.HasOne("CoinUp.Shared.Models.CoinsMarket", "Coin")
                        .WithMany()
                        .HasForeignKey("CoinId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("CoinUpAPI.Models.EWallet", "Wallet")
                        .WithMany("Holdings")
                        .HasForeignKey("WalletId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Coin");

                    b.Navigation("Wallet");
                });

            modelBuilder.Entity("CoinUpAPI.Models.EWallet", b =>
                {
                    b.HasOne("CoinUpAPI.Models.User", "User")
                        .WithOne("Wallet")
                        .HasForeignKey("CoinUpAPI.Models.EWallet", "UserId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("User");
                });

            modelBuilder.Entity("CoinUpAPI.Models.PortfolioSnapshot", b =>
                {
                    b.HasOne("CoinUpAPI.Models.User", "User")
                        .WithMany("PortfolioSnapshots")
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("User");
                });

            modelBuilder.Entity("CoinUpAPI.Models.Transaction", b =>
                {
                    b.HasOne("CoinUp.Shared.Models.CoinsMarket", "Coin")
                        .WithMany()
                        .HasForeignKey("CoinId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("CoinUpAPI.Models.EWallet", "Wallet")
                        .WithMany("Transactions")
                        .HasForeignKey("WalletId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Coin");

                    b.Navigation("Wallet");
                });

            modelBuilder.Entity("CoinUpAPI.Models.WatchlistItem", b =>
                {
                    b.HasOne("CoinUp.Shared.Models.CoinsMarket", "Coin")
                        .WithMany()
                        .HasForeignKey("CoinId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("CoinUpAPI.Models.User", "User")
                        .WithMany("Watchlist")
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Coin");

                    b.Navigation("User");
                });

            modelBuilder.Entity("CoinUpAPI.Models.EWallet", b =>
                {
                    b.Navigation("Holdings");

                    b.Navigation("Transactions");
                });

            modelBuilder.Entity("CoinUpAPI.Models.User", b =>
                {
                    b.Navigation("PortfolioSnapshots");

                    b.Navigation("Wallet")
                        .IsRequired();

                    b.Navigation("Watchlist");
                });
#pragma warning restore 612, 618
        }
    }
}
